fix: Remove redundant invalid a tag from catalog
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -298,7 +298,7 @@
       </div>
       <ul class="footer-nav">
         <li>
-          <a href="#" class="active"><a href="#" class="active">Для поставщиков</a>
+          <a href="#" class="active">Для поставщиков</a>
         </li>
         <li>
           <a href="#" class="active">О производстве</a>
