fix: Replace a tag to button
Because of we do not need go to another page - only display popup.

Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -50,13 +50,13 @@
       </nav>
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
-          <a href="#" class="search-icon">Поиск</a>
+          <button class="search-icon visually-hidden">Поиск</button>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
         </div>
         <div class="btn btn_small btn_enter">
-          <a href="#" class="enter-icon">Вход</a>
+          <button class="enter-icon">Вход</button>
           <div class="popup">
             <form action="" method="" id="sign-in">
               <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="btn btn_small btn_cart">
-          <a href="#" class="basket basket__active">Корзина</a>
+          <button class="basket basket__active">2 товара</button>
           <div class="popup">
             <form id="cart" method="" action="">
               <table>
