--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </nav>
         <div class="header-buttons">
           <div class="btn btn_small btn_search">
-            <a href="#" class="search-icon">Поиск</a>
+            <button class="search-icon visually-hidden">Поиск</button>
             <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
             </form>
           </div>
           <div class="btn btn_small btn_enter">
-            <a href="#" class="enter-icon">Вход</a>
+            <button class="enter-icon">Вход</button>
             <div class="popup">
               <form action="" method="" id="sign-in">
                 <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="btn btn_small btn_cart">
-            <a href="#" class="basket">Корзина</a>
+            <button class="basket">Пусто</button>
           </div>
         </div>
       </header>
