Add heading for section block
For semantics and screen readers

Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -99,6 +99,7 @@
     </header>
     <main>
       <section class="breadcrumbs-container">
+        <h2 class="visually-hidden">Навигация и время работы</h2>
         <ul class="breadcrumbs-items">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Каталог</a></li>
@@ -170,6 +171,7 @@
         </div>
       </section>
       <section class="container-prices">
+        <h2 class="visually-hidden">Цены на мороженое</h2>
         <div class="price-card">
           <div class="img-container">
             <img src="img/creamy-orange-circle.jpg" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
