--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       </header>
       <main>
         <section>
+          <h2 class="visually-hidden">Рекламный баннер</h2>
           <div class="work-info">
             <div class="work-time">
               <p class="schedule">с 10 до 20, ежедневно</p>
@@ -105,6 +106,7 @@
           </div>
         </section>
         <section class="special-offer">
+          <h2 class="visually-hidden">Специальное предложение</h2>
           <article class="offer-item">
             <h2>Малинки даром!</h2>
             <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -118,6 +120,7 @@
           </article>
         </section>
         <section class="container-prices">
+          <h2 class="visually-hidden">Цены</h2>
           <div class="price-card">
             <div class="img-container">
               <img src="img/creamy-orange-circle.jpg" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
@@ -189,6 +192,7 @@
       </main>
     </div>
     <section class="map">
+      <h2 class="visually-hidden">Карта</h2>
       <div class="map-container"></div>
     </section>
     <footer>
