fix: Hide text link but leave accessibility
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -293,10 +293,10 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter visually-hidden">Твиттер</a>
-        <a href="#" class="instagram visually-hidden">Инстаграм</a>
-        <a href="#" class="facebook visually-hidden">Фейсбук</a>
-        <a href="#" class="vkontakt visually-hidden">Вконтакте</a>
+        <a href="#" class="twitter hidden">Твиттер</a>
+        <a href="#" class="instagram hidden-text">Инстаграм</a>
+        <a href="#" class="facebook hidden-text">Фейсбук</a>
+        <a href="#" class="vkontakt hidden-text">Вконтакте</a>
       </div>
       <ul class="footer-nav">
         <li>
