--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
     <footer>
       <div class="container">
         <div class="social">
-          <a href="#" class="twitter visually-hidden">Твиттер</a>
-          <a href="#" class="instagram visually-hidden">Инстаграм</a>
-          <a href="#" class="facebook visually-hidden">Фейсбук</a>
-          <a href="#" class="vkontakt visually-hidden">Вконтакте</a>
+          <a href="#" class="twitter hidden-text">Твиттер</a>
+          <a href="#" class="instagram hidden-text">Инстаграм</a>
+          <a href="#" class="facebook hidden-text">Фейсбук</a>
+          <a href="#" class="vkontakt hidden-text">Вконтакте</a>
         </div>
         <div class="footer-nav">
           <ul>
