--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,9 @@
       </nav>
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
-          <button class="search-icon visually-hidden">Поиск</button>
+          <button class="search-icon">
+            <span class="visually-hidden">Поиск</span>
+          </button>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
@@ -293,10 +295,18 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter hidden">Твиттер</a>
-        <a href="#" class="instagram hidden-text">Инстаграм</a>
-        <a href="#" class="facebook hidden-text">Фейсбук</a>
-        <a href="#" class="vkontakt hidden-text">Вконтакте</a>
+        <a href="#" class="twitter">
+          <span class="visually-hidden">Твиттер</span>
+        </a>
+        <a href="#" class="instagram">
+          <span class="visually-hidden">Инстаграм</span>
+        </a>
+        <a href="#" class="facebook">
+          <span class="visually-hidden">Фейсбук</span>
+        </a>
+        <a href="#" class="vkontakt">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
       </div>
       <ul class="footer-nav">
         <li>
