fix: Add correct classes for footer's list
Also add classes for social items

Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -295,31 +295,31 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter">
+        <a href="#" class="social-icon twitter">
           <span class="visually-hidden">Твиттер</span>
         </a>
-        <a href="#" class="instagram">
+        <a href="#" class="social-icon instagram">
           <span class="visually-hidden">Инстаграм</span>
         </a>
-        <a href="#" class="facebook">
+        <a href="#" class="social-icon facebook">
           <span class="visually-hidden">Фейсбук</span>
         </a>
-        <a href="#" class="vkontakt">
+        <a href="#" class="social-icon vkontakt">
           <span class="visually-hidden">Вконтакте</span>
         </a>
       </div>
-      <ul class="footer-nav">
+      <ul class="footer-list">
         <li>
-          <a href="#" class="active">Для поставщиков</a>
+          <a href="#" class="list-item active">Для поставщиков</a>
         </li>
         <li>
-          <a href="#" class="active">О производстве</a>
+          <a href="#" class="list-item">О производстве</a>
         </li>
         <li>
-          <a href="#" class="active">Наши документы</a>
+          <a href="#" class="list-item">Наши документы</a>
         </li>
         <li>
-          <a href="#" class="active">Экологические стандарты</a>
+          <a href="#" class="list-item">Экологические стандарты</a>
         </li>
       </ul>
       <div class="copyright">
