--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Gllacy Shop | Глейси - магазин мороженого</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
   <script src="main.js"></script>
 </head>
