Add backgorund styles for nav button
And also add background style for button search

Fixes #1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </a>
             </li>
             <li>
-              <a href="#">Каталог</a>
+              <a class="nav-active" href="#">Каталог</a>
               <ul class="popup">
                 <li>
                   <a href="#">Новинки</a>
