--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,9 @@
       </nav>
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
-          <a href="#" class="search-icon">Поиск</a>
+          <button class="search-icon">
+            <span class="visually-hidden">Поиск</span>
+          </button>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
